# Calibrate-SoC

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  LICENSE  README.md  ROADMAP.md  SMART-AUTOTDP-DESIGN.md  TESTING.md  downloads.json  gradle.properties  settings.gradle.kts
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  device-compatibility.yml
.github/workflows/: downloads-badge.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: changelog.md
app/src/main/assets/devicedb/: adapters.json
app/src/main/cpp/: CMakeLists.txt  NativeBench.cpp  bench_aes.c  bench_aes.h  bench_cpu.c  bench_cpu.h  bench_float.c  bench_float.h  bench_mem.c  bench_mem.h
app/src/main/java/io/github/mayusi/calibratesoc/: CalibrateSocApplication.kt  MainActivity.kt
app/src/main/java/io/github/mayusi/calibratesoc/debug/: AyaneoBindProbe.kt  AyaneoProbeReceiver.kt  RetroidFanProbe.kt  RetroidFanProbeReceiver.kt
app/src/main/java/io/github/mayusi/calibratesoc/di/: AppModule.kt
app/src/main/java/io/github/mayusi/calibratesoc/ui/: CalibrateSocApp.kt  Destination.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml  backup_rules.xml  data_extraction_rules.xml  file_provider_paths.xml
content/: README.md  manifest.json  presets.json
gradle/: libs.versions.toml
(+512 files in other folders)
